Tue Jun  1 00:40:04 1999  Harlan Stenn  <stenn@pogo.udel.edu>

	* build: mips-dec-ultrix4.4 hates "set -e"

	* flock-build: Created

	* build: added -l option

Mon May 31 20:28:40 1999  Harlan Stenn  <stenn@pogo.udel.edu>

	* README: Removed auto{make,conf}.patch files

Tue May 25 01:20:53 1999  Harlan Stenn  <stenn@whimsy.udel.edu>

	* Makefile.am ($(srcdir)/COPYRIGHT): Added
	(EXTRA_DIST): Remove auto*.patches

Thu May 20 01:03:00 1999  Harlan Stenn  <stenn@whimsy.udel.edu>

	* Makefile.am (dist-hook): Call dos2unix on the .htm files

	* ntpd/refclock_palisade.h: Clean up declarations.

	* configure.in (ac_cv_struct_ntptimeval_timespec): Added.
	(ac_cv_make_ntptime): Only if ntptimeval does not use timespec.

	* util/tickadj.c: Linux Patches
	From: Reg Clemens <reg@dwf.com>

Wed May 19 01:18:24 1999  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.93a

	* ntpd/refclock_palisade.h: Restore some lost patches
	From: Kamal A Mostafa <kamal@whence.com>

Sun May 16 13:18:32 1999  Philippe De Muyter  <phdm@macqel.be>

	* libparse/clk_wharton.c (cvt_wharton_400a, inp_wharton_400a): Expect
	serial output format number 1, not 5.
	(clock_wharton_400a) : Likewise.
	* ntpd/refclock_parse.c (parse_clockinfo): For Wharton 400a clock,
	do not poll, but expect a message every second.
	* html/parsedata.htm : Entry added for Wharton 400a clock.
	* html/driver8.htm : Entry fixed for Wharton 400a clock.

Sun May 16 02:59:46 1999  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.93

Sat May 15 18:53:47 1999  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in (ntp_refclock): ONCORE requires PPSAPI, CIOGETEV,
	or TIOCGPPSEV.
	Reported by: Reg Clemens <reg@dwf.com>

Fri May 14 23:58:35 1999  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.92h2
	
	* configure.in (ac_cv_make_ntptime): Not under Linux.  Yes, it
	works for some people.  We're tired of the complaints from the
	others.

Fri May 14 18:58:59 1999  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
